# encoji

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  emojis.json
src/: lib.rs
